--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
-  "author": "Martín Sarasola",
+  "author": "José Martín Sarasola",
   "license": "ISC",
   "description": "",
   "dependencies": {
